<resources>
    <string name="app_name">Пасека</string>

    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_row_confirm">Вы действительно хотите удалить запись?</string>
    <string name="delete_db_title">Удаление БД</string>
    <string name="delete_db_confirm">Вы действительно хотите удалить ВСЕ сохраненные данные приложения? Восстановление будет невозможно!</string>
    <string name="delete_db_result">"База данных удалена."</string>

    <string name="delete_inventory_title">Укажите причину удаления:</string>

    <string name="inventory_modify_category">Категория инвентаря:</string>
    <string name="inventory_modify_inventory_number">Инвентарный номер:</string>
    <string name="inventory_modify_number">Номер улья:</string>
    <string name="inventory_modify_hive_type">Тип улья:</string>
    <string name="inventory_modify_size">Размер улья (кол-во рамок):</string>
    <string name="inventory_modify_location">Местоположение:</string>
    <string name="inventory_modify_description">Дополнительная информация:</string>
    <string name="inventory_modify_broken">Требует ремонта</string>

    <string name="inventory_scheduler_search_text">Найти задачи по названию</string>
    <string name="inventory_scheduler_search_date">Найти задачи по дате</string>
    <string name="inventory_scheduler_search_status">Найти задачи по статусу</string>

    <string name="task_button_execute">Выполнить</string>
    <string name="task_button_reject">Отменить</string>
    <string name="task_button_edit">Изменить</string>
    <string name="task_button_stop">Остановить</string>
    <string name="task_stop_title">Остановка задачи</string>
    <string name="task_stop_confirm">Вы действительно хотите остановить задачу?</string>
    <string name="task_stop_result">Задача остановлена!</string>
    <string name="task_reject_title">Отменить выполнение</string>
    <string name="task_reject_confirm">Вы действительно хотите отменить выполнение задачи?</string>
    <string name="task_reject_result">Выполнение задачи отменено!</string>
    <string name="task_execute_title">Выполнить задачу</string>
    <string name="task_execute_confirm">Задача выполнена и Вы действительно хотите изменить ее статус?</string>
    <string name="task_execute_result">Задача выполнена!</string>


    <!-- ACTIONS -->
    <string name="action_Add">Добавить</string>
    <string name="action_Edit">Изменить</string>
    <string name="action_Delete">Удалить</string>

    <!-- ГЛАВНОЕ МЕНЮ -->
    <string name="menu_inventory">Инвентарь</string>
    <string name="menu_directories">Справочники</string>
    <string name="menu_delete_db">Удалить все данные</string>
    <string name="menu_about">О программе</string>

    <string-array name="directories">
        <item>Расположение ульев</item>
        <item>Типы ульев</item>
        <item>Породы пчел</item>
    </string-array>

    <string-array name="delete_reasons">
        <item>Неисправность</item>
        <item>Кража</item>
        <item>Другое</item>
    </string-array>

    <string-array name="action_statuses">
        <item>Активные задачи</item>
        <item>Ожидает выполнения</item>
        <item>Просрочена</item>
        <item>Выполнена</item>
        <item>Отменена</item>
        <item>Только остановленные</item>
    </string-array>


    <!-- РЕСУРСЫ БАЗЫ ДАННЫХ -->
    <string-array name="hive_types">
        <item>Дадан</item>
        <item>Рут</item>
        <item>Лежак</item>
    </string-array>
    <string-array name="breeds">
        <item>Среднерусские</item>
        <item>Карпатские</item>
        <item>Кавказские</item>
        <item>Краинские</item>
        <item>Северные</item>
        <item>Украинские</item>
        <item>Бакфастские</item>
        <item>Башкирские</item>
        <item>Абхазские</item>
    </string-array>
    <string-array name="inventory_categories">
        <item>Ульи</item>
        <item>Корпуса</item>
        <item>Магазины</item>
        <item>Ловушки</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>