<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/stop"
        android:title="@string/task_button_stop"
        android:icon="@drawable/delete"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        android:visibility="gone"/>
    <item
        android:id="@+id/edit"
        android:title="@string/task_button_edit"
        android:icon="@drawable/pencil"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:visibility="gone"/>
    <item
        android:id="@+id/reject"
        android:title="@string/task_button_reject"
        android:icon="@drawable/close"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:visibility="gone"/>
    <item
        android:id="@+id/execute"
        android:title="@string/task_button_execute"
        android:icon="@drawable/check"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:visibility="gone"/>
</menu>